# NylonSock

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
NylonSock/: NylonSock.1  Socket.h  test.cpp
NylonSock.xcodeproj/: project.pbxproj
NylonSock.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NylonSock.xcodeproj/project.xcworkspace/xcshareddata/: NylonSock.xccheckout
NylonSock.xcodeproj/project.xcworkspace/xcuserdata/norayu.xcuserdatad/: UserInterfaceState.xcuserstate
NylonSock.xcodeproj/xcshareddata/xcschemes/: NylonSock.xcscheme
NylonSock.xcodeproj/xcuserdata/norayu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
NylonSock.xcodeproj/xcuserdata/norayu.xcuserdatad/xcschemes/: xcschememanagement.plist
NylonSock/include/: NylonSock.hpp
NylonSock/include/NylonSock/: Definitions.h  Socket.cpp  Socket.h  Sustainable.cpp  Sustainable.h
NylonSock/src/: Socket.cpp  Socket.h  Sustainable.cpp  Sustainable.h
NylonSock/test/: sharedclient.h  test.cpp  testclient.cpp  testserver.cpp
VStudios/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  nylonsock.sln  nylonsock.vcxproj  nylonsock.vcxproj.filters
VStudios/Debug/: nylonsock.ilk
VStudios/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
VStudios/nylonsock.dir/Debug/nylonsock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  nylonsock.lastbuildstate
